tests/paczka1/small_fuzzy/13504962.err
Error in line 7: k2ssWcW S361 98,0
Error in line 11: H9NabBb S404 3,3
Error in line 5: wOOPgznFAy S397 48,2
Error in line 15: H9NabBb S361 -4,0
